css fix: floor name alignment fixed

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -74,7 +74,7 @@ body {
   border-bottom: 2px solid #5f6f65;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  /* align-items: center; */
   margin-left: 5px;
   margin-right: 5px;
   min-width: 100vw;
@@ -93,8 +93,21 @@ body {
   font-weight: bold;
 }
 
+.floor-content {
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  align-self: center;
+}
+
 .floor-label {
   font-weight: bold;
+  justify-content: flex-start;
+  font-weight: bold;
+  align-items: flex-start;
+  /* text-align: start; */
+  display: flex;
+  flex-direction: row;
 }
 
 /* Lift Container */
